# Telegram_Forwarder

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  app.json  chat_list.json  chat_list.sample.json  docker-compose.yml  env_dist  pyproject.toml  requirements.txt  sample.env
.github/: stale.yml
auto_forwarder/: __init__.py  __main__.py  sample_config.py
auto_forwarder/modules/: __init__.py  misc.py
forwarder/: __init__.py  __main__.py  main.py  sample_config.py
forwarder/modules/: __init__.py  auto_forward.py  default.py  feds.py  forward.py  misc.py
forwarder/utils/: __init__.py  chat.py  message.py
